--- a/src/main/webapp/tds/web-app/css/elements/component/api-action-view-edit-component.sass
+++ b/src/main/webapp/tds/web-app/css/elements/component/api-action-view-edit-component.sass
@@ -92,3 +92,6 @@
       content: "*"
       color: $color-message-error--red
       margin-left: 4px
+  .modal-footer
+    tds-button-custom
+      margin-left: 5px
