TM-13348 Add button components to credential views

--- a/src/main/webapp/tds/web-app/app-js/modules/credential/components/list/credential-list.component.html
+++ b/src/main/webapp/tds/web-app/app-js/modules/credential/components/list/credential-list.component.html
@@ -24,7 +24,7 @@
 					</ng-template>
 
 					<!-- Action -->
-					<kendo-grid-command-column [width]="108" [locked]="true">
+					<kendo-grid-command-column [width]="70" [locked]="true">
 						<ng-template kendoGridHeaderTemplate>
 							<div class="text-center">
 								<label class="action-header"> {{ 'GLOBAL.ACTION' | translate }} </label>
@@ -33,9 +33,11 @@
 						<ng-template kendoGridCellTemplate
 						             let-dataItem
 						             let-rowIndex="rowIndex">
-							<div class="text-center">
-								<button class="btn btn-default" (click)="onEdit(dataItem)" *ngIf="isEditAvailable()"><span class="glyphicon glyphicon-pencil"></span></button>
-								<button class="btn btn-default" (click)="onDelete(dataItem)" *ngIf="isDeleteAvailable()"><span class="fa fa-fw fa-trash"></span></button>
+							<div class="tds-action-button-set">
+								<tds-button-edit (click)="onEdit(dataItem)" *ngIf="isEditAvailable()">
+								</tds-button-edit>
+								<tds-button-delete (click)="onDelete(dataItem)" *ngIf="isDeleteAvailable()">
+								</tds-button-delete>
 							</div>
 						</ng-template>
 					</kendo-grid-command-column>
