--- a/src/main/webapp/tds/web-app/app-js/modules/credential/components/view-edit/credential-view-edit.component.html
+++ b/src/main/webapp/tds/web-app/app-js/modules/credential/components/view-edit/credential-view-edit.component.html
@@ -261,22 +261,27 @@
 		</form>
 	</div>
 	<div class="modal-footer form-group-center">
-		<button type="button" *ngIf="modalType === actionTypes.EDIT || modalType === actionTypes.CREATE" (click)="onSaveCredential()"
-		 class="btn btn-primary pull-left" [disabled]="!credentialForm.form.valid || credentialModel.provider.id === 0 || (!validExpressionResult.valid && (credentialModel.authMethod === authMethods.COOKIE || credentialModel.authMethod === authMethods.HEADER))">
-			<span class="fa fa-fw fa-floppy-o"></span> Save</button>
-		<button type="button" *ngIf="modalType === actionTypes.VIEW" (click)="changeToEditCredential()" class="btn btn-primary pull-left">
-			<span class="glyphicon glyphicon-pencil"></span> Edit</button>
+		<tds-button-save *ngIf="modalType === actionTypes.EDIT || modalType === actionTypes.CREATE"
+		                 (click)="onSaveCredential()"
+		                 class="btn-primary pull-left"
+		                 [disabled]="!credentialForm.form.valid || credentialModel.provider.id === 0 || (!validExpressionResult.valid && (credentialModel.authMethod === authMethods.COOKIE || credentialModel.authMethod === authMethods.HEADER))">
+		</tds-button-save>
+
+		<tds-button-edit *ngIf="modalType === actionTypes.VIEW"
+		                 (click)="changeToEditCredential()"
+		                 class="btn-primary pull-left">
+		</tds-button-edit>
+
         <tds-check-action class="pull-left check-action" [name]="'Test Authentication'" *ngIf="modalType === actionTypes.VIEW" [(model)]="operationStatusModel" (onClick)="verifyCode(operationStatusModel)" [disabled]="isCheckSyntaxDisabled()"></tds-check-action>
-		<button type="button" *ngIf="modalType !== actionTypes.CREATE" (click)="onDeleteCredential()" class="btn btn-danger">
-			<span class="fa fa-fw fa-trash"></span> Delete</button>
-		<button (click)="cancelCloseDialog()" type="button" class="btn btn-default pull-right">
-			<span class="glyphicon glyphicon-ban-circle"></span>
-			<span *ngIf="modalType === actionTypes.VIEW">
-				{{'GLOBAL.CLOSE' | translate }}
-			</span>
-			<span *ngIf="modalType === actionTypes.EDIT || modalType === actionTypes.CREATE">
-				{{'GLOBAL.CANCEL' | translate }}
-			</span>
-		</button>
+
+		<tds-button-delete *ngIf="modalType !== actionTypes.CREATE" (click)="onDeleteCredential()" class="btn-danger">
+		</tds-button-delete>
+
+		<tds-button-close *ngIf="modalType === actionTypes.VIEW" (click)="cancelCloseDialog()" class="pull-right">
+		</tds-button-close>
+
+		<tds-button-cancel *ngIf="modalType === actionTypes.EDIT || modalType === actionTypes.CREATE"
+		                   (click)="cancelCloseDialog()" class="pull-right">
+		</tds-button-cancel>
 	</div>
 </div>
