--- a/src/main/webapp/tds/web-app/app-js/modules/dataScript/components/view-edit/data-script-view-edit.component.html
+++ b/src/main/webapp/tds/web-app/app-js/modules/dataScript/components/view-edit/data-script-view-edit.component.html
@@ -89,23 +89,30 @@
 		</form>
 	</div>
 	<div class="modal-footer form-group-center">
-		<button type="button" *ngIf="modalType === actionTypes.EDIT || modalType === actionTypes.CREATE" (click)="onSaveDataScript()"
-		 class="btn btn-primary pull-left" [disabled]="!dataScriptForm.form.valid || !isUnique || (dataScriptModel.provider && !dataScriptModel.provider.id)">
-			<span class="fa fa-fw fa-floppy-o"></span> Save</button>
-		<button type="button" *ngIf="modalType === actionTypes.VIEW" (click)="changeToEditDataScript()" class="btn btn-primary pull-left">
-			<span class="glyphicon glyphicon-pencil"></span> Edit</button>
-		<button type="button" *ngIf="modalType === actionTypes.VIEW" (click)="onDataScriptDesigner()" class="btn btn-primary pull-left">
-			<span class="glyphicon glyphicon-eye-open"></span> {{'DATA_INGESTION.DATASCRIPT.DESIGNER.ETL_BUILDER_TITLE' | translate }}</button>
-		<button type="button" *ngIf="modalType !== actionTypes.CREATE" (click)="onDeleteDataScript()" class="btn btn-danger">
-			<span class="fa fa-fw fa-trash"></span> Delete</button>
-		<button (click)="cancelCloseDialog()" type="button" class="btn btn-default pull-right">
-			<span class="glyphicon glyphicon-ban-circle"></span>
-			<span *ngIf="modalType === actionTypes.VIEW">
-				{{'GLOBAL.CLOSE' | translate }}
-			</span>
-			<span *ngIf="modalType === actionTypes.EDIT || modalType === actionTypes.CREATE">
-				{{'GLOBAL.CANCEL' | translate }}
-			</span>
-		</button>
+		<tds-button-save  *ngIf="modalType === actionTypes.EDIT || modalType === actionTypes.CREATE" 
+			(click)="onSaveDataScript()" class="btn-primary pull-left" 
+			[disabled]="!dataScriptForm.form.valid || !isUnique || (dataScriptModel.provider && !dataScriptModel.provider.id)">
+		</tds-button-save>
+
+		<tds-button-edit *ngIf="modalType === actionTypes.VIEW" 
+			(click)="changeToEditDataScript()" class="btn-primary pull-left">
+		</tds-button-edit>
+
+		<tds-button-custom *ngIf="modalType === actionTypes.VIEW" [icon]="'eye'"
+			(click)="onDataScriptDesigner()" class="btn-primary pull-left">
+			{{'DATA_INGESTION.DATASCRIPT.DESIGNER.ETL_BUILDER_TITLE' | translate }}
+		</tds-button-custom>
+
+		<tds-button-delete *ngIf="modalType !== actionTypes.CREATE" 
+			(click)="onDeleteDataScript()" class="btn-danger">
+		</tds-button-delete>
+
+		<tds-button-close *ngIf="modalType === actionTypes.VIEW"
+			(click)="cancelCloseDialog()" class="pull-right">
+		</tds-button-close>
+
+		<tds-button-cancel *ngIf="modalType === actionTypes.EDIT || modalType === actionTypes.CREATE"
+			(click)="cancelCloseDialog()" class="pull-right">
+		</tds-button-cancel>
 	</div>
 </div>
