--- a/src/main/webapp/tds/web-app/app-js/modules/licenseAdmin/components/detail/license-detail.component.html
+++ b/src/main/webapp/tds/web-app/app-js/modules/licenseAdmin/components/detail/license-detail.component.html
@@ -104,13 +104,22 @@
 		</form>
 	</div>
 	<div class="modal-footer form-group-center">
-        <button *ngIf="licenseModel.status !== licenseStatus.ACTIVE" type="button" class="btn btn-primary pull-left" (click)="applyLicenseKey()"><i class="fa fa-fw fa-key"></i> Apply License Key</button>
-        <button *ngIf="licenseModel.status !== licenseStatus.ACTIVE" type="button" class="btn btn-primary pull-left" (click)="resubmitLicenseRequest()"><span class="glyphicon glyphicon-share-alt"></span> Resubmit Request</button>
-        <button *ngIf="licenseModel.status !== licenseStatus.ACTIVE" type="button" class="btn btn-primary pull-left" (click)="manuallyRequest()"><i class="fa fa-fw fa-envelope"></i> Manually Submit Request</button>
-        <button type="button" class="btn btn-danger" [ngClass]="{'pull-left': licenseModel.status === licenseStatus.ACTIVE}" (click)="onDelete()"><span class="glyphicon glyphicon-trash"></span> Delete License</button>
-		<button (click)="cancelCloseDialog()" type="button" class="btn btn-default pull-right">
-			<span class="glyphicon glyphicon-ban-circle"></span>
-			<span>{{'GLOBAL.CANCEL' | translate }}</span>
-		</button>
+		<tds-button-custom *ngIf="licenseModel.status !== licenseStatus.ACTIVE"  [icon]="'key'"
+			class="btn-primary pull-left" (click)="applyLicenseKey()" title="Apply License Key">
+        </tds-button-custom>
+
+		<tds-button-custom *ngIf="licenseModel.status !== licenseStatus.ACTIVE" class="btn-primary pull-left" [icon]="'reply'"
+			(click)="resubmitLicenseRequest()" title="Resubmit Request">
+		</tds-button-custom>
+
+		<tds-button-custom *ngIf="licenseModel.status !== licenseStatus.ACTIVE" [icon]="'envelope'"
+			class="btn-primary pull-left" (click)="manuallyRequest()" title="Manually Submit Request">
+        </tds-button-custom>
+
+		<tds-button-delete class="btn-danger" title="Delete License"
+			[ngClass]="{'pull-left': licenseModel.status === licenseStatus.ACTIVE}" (click)="onDelete()">
+		</tds-button-delete>
+
+		<tds-button-cancel (click)="cancelCloseDialog()" class="pull-right"></tds-button-cancel>
 	</div>
 </div>
