--- a/src/main/webapp/tds/web-app/app-js/modules/noticeManager/components/list/notice-list.component.html
+++ b/src/main/webapp/tds/web-app/app-js/modules/noticeManager/components/list/notice-list.component.html
@@ -19,7 +19,8 @@
                         (cellClick)="cellClick($event)"
                         [selectable]="true">
                     <ng-template kendoGridToolbarTemplate [position]="'top'">
-                        <button class="btn btn-default button-create-license" type="button" (click)="onCreateNotice()"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> {{ 'NOTICE.CREATE_NOTICE' | translate }}</button>
+                        <tds-button-add class="button-create-license" (click)="onCreateNotice()" [title]="'NOTICE.CREATE_NOTICE' | translate">
+                        </tds-button-add>
                         <div (click)="reloadData()" class="kendo-grid-toolbar__refresh-btn"><span class="glyphicon glyphicon-refresh" aria-hidden="true"></span></div>
                     </ng-template>
                     <kendo-grid-column *ngFor="let column of noticeColumnModel.columns" field="{{column.property}}" format="{{column.format}}" [locked]="column.locked" [width]="!column.width ? COLUMN_MIN_WIDTH : column.width">
@@ -51,9 +52,9 @@
                         </ng-template>
 
                         <ng-template kendoGridCellTemplate *ngIf="column.type === 'action'" let-dataItem>
-                            <div class="text-center">
-                                <button class="btn btn-default" (click)="openNoticeViewEdit(dataItem)"><span class="glyphicon glyphicon-pencil"></span></button>
-                                <button class="btn btn-default" (click)="onDelete(dataItem)"><span class="fa fa-fw fa-trash"></span></button>
+                            <div class="tds-action-button-set">
+                                <tds-button-edit (click)="openNoticeViewEdit(dataItem)"></tds-button-edit>
+                                <tds-button-delete (click)="onDelete(dataItem)"></tds-button-delete>
                             </div>
                         </ng-template>
 
