--- a/src/main/webapp/tds/web-app/css/page/index.sass
+++ b/src/main/webapp/tds/web-app/css/page/index.sass
@@ -25,6 +25,7 @@
 @import "module/licenseAdmin/manual-request-component"
 @import "module/licenseManager/license-manager-detail-component"
 @import "module/noticeManager/view-html-component"
+@import "module/noticeManager/notice-view-edit-component"
 @import "module/dataIngestion/provider-list-component"
 @import "module/fieldSettings/selectlist-configuration-popup.component"
 @import "module/fieldSettings/min-max-configuration-popup.component"
