--- a/src/main/webapp/tds/web-app/app-js/modules/apiAction/components/list/api-action-list.component.html
+++ b/src/main/webapp/tds/web-app/app-js/modules/apiAction/components/list/api-action-list.component.html
@@ -19,7 +19,7 @@
 						(cellClick)="cellClick($event)"
 						[selectable]="true">
 					<ng-template kendoGridToolbarTemplate [position]="'top'">
-						<tds-button-create [title]="createActionText" class="button-create-action" id="btnCreate" type="button" (click)="onCreate()" *ngIf="isCreateAvailable()"></tds-button-create>
+						<tds-button-add [title]="createActionText" class="button-create-action" [id]="'btnCreate'" (click)="onCreate()" *ngIf="isCreateAvailable()"></tds-button-add>
 						<div (click)="reloadData()" class="kendo-grid-toolbar__refresh-btn"><span class="glyphicon glyphicon-refresh" aria-hidden="true"></span></div>
 					</ng-template>
 
