--- a/src/main/webapp/tds/web-app/app-js/modules/dataScript/components/list/data-script-list.component.html
+++ b/src/main/webapp/tds/web-app/app-js/modules/dataScript/components/list/data-script-list.component.html
@@ -20,11 +20,9 @@
 						(pageChange)="pageChange($event)"
 						[rowSelected]="isRowSelected">
 					<ng-template kendoGridToolbarTemplate [position]="'top'">
-						<button class="btn btn-default" id="btnCreateDataScript" type="button"
-                                (click)="onCreateDataScript()">
-                            <span class="glyphicon glyphicon-plus button-create-data-script" aria-hidden="true"></span>
-                            {{ 'DATA_INGESTION.CREATE_ETL_SCRIPT' | translate }}
-                        </button>
+						<tds-button-add [id]="'btnCreateDataScript'" class="button-create-data-script" 
+							[title]="'DATA_INGESTION.CREATE_ETL_SCRIPT' | translate" (click)="onCreateDataScript()">
+						</tds-button-add>
 						<div (click)="reloadDataScripts()" class="kendo-grid-toolbar__refresh-btn"><span class="glyphicon glyphicon-refresh" aria-hidden="true"></span></div>
 					</ng-template>
 
