--- a/src/main/webapp/tds/web-app/css/shared/components/action-button.component.sass
+++ b/src/main/webapp/tds/web-app/css/shared/components/action-button.component.sass
@@ -27,6 +27,10 @@ $tds-action-button-icon-flat-color: #666
 .tds-action-button
   i
     font-size: 16px
+  .tds-action-button-container
+    display: flex
+    justify-content: center
+    align-items: center
 
 .tds-action-button.not-has-all-permissions
   cursor: not-allowed
