TM-13348 Add css class based on selector name

--- a/src/main/webapp/tds/web-app/app-js/modules/credential/components/list/credential-list.component.html
+++ b/src/main/webapp/tds/web-app/app-js/modules/credential/components/list/credential-list.component.html
@@ -19,7 +19,8 @@
 						(cellClick)="cellClick($event)"
 						[selectable]="true">
 					<ng-template kendoGridToolbarTemplate [position]="'top'">
-						<button class="btn btn-default" id="btnCreate" type="button" (click)="onCreate()" *ngIf="isCreateAvailable()"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> {{ 'CREDENTIAL.CREATE_CREDENTIAL' | translate }}</button>
+						<tds-button-create  [id]="'btnCreate'" (click)="onCreate()" *ngIf="isCreateAvailable()" [title]="'CREDENTIAL.CREATE_CREDENTIAL' | translate">
+						</tds-button-create>
 						<div (click)="reloadData()" class="kendo-grid-toolbar__refresh-btn"><span class="glyphicon glyphicon-refresh" aria-hidden="true"></span></div>
 					</ng-template>
 
