TM-14676 - Apply ellipses to reduce the size of the columns

--- a/src/main/webapp/tds/web-app/css/page/module/dependencies/dependencies-view-grid-component.sass
+++ b/src/main/webapp/tds/web-app/css/page/module/dependencies/dependencies-view-grid-component.sass
@@ -13,14 +13,18 @@
       border: 0
   .bulkchange-section
     padding-left: 8px
-    display: flex;
-    justify-content: start;
-    align-items: center;
+    display: flex
+    justify-content: start
+    align-items: center
 
   .k-grid
     margin-top: 10px
     min-height: 100%
     position: relative
+    tbody tr td
+      overflow: hidden
+      text-overflow: ellipsis
+      white-space: nowrap
     .k-filter-row
       td
         vertical-align: top
