TM-14291 - Small change to the Menu 'cause we have two

--- a/src/main/webapp/tds/web-app/app-js/shared/modules/header/components/tranman-menu/tranman-menu.component.html
+++ b/src/main/webapp/tds/web-app/app-js/shared/modules/header/components/tranman-menu/tranman-menu.component.html
@@ -161,12 +161,12 @@
                     </li>
                     <li class="menu-child-item menu-parent-assets-storage-list assets-asset-explorer-child">
                         <a [routerLink]="['/asset','views',5,'show']" id="5">
-                            <svg style="height: 16px; width: 16px;" class="tds-svg-icons " viewBox="0 0 115 115" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"> <image x="0" y="0" height="110px" width="110px" fill="#1f77b4" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="/tdstm/assets/icons/svg/storagePhysical_menu.svg"></image></svg> Storage - Devices
+                            <svg style="height: 16px; width: 16px;" class="tds-svg-icons " viewBox="0 0 115 115" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"> <image x="0" y="0" height="110px" width="110px" fill="#1f77b4" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="/tdstm/assets/icons/svg/storagePhysical_menu.svg"></image></svg> Physical Storage
                         </a>
                     </li>
                     <li class="menu-child-item menu-parent-assets-storage-logical-list assets-asset-explorer-child">
                         <a [routerLink]="['/asset','views',6,'show']" id="6">
-                            <svg style="height: 16px; width: 16px;" class="tds-svg-icons " viewBox="0 0 115 115" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"> <image x="0" y="0" height="110px" width="110px" fill="#1f77b4" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="/tdstm/assets/icons/svg/storageLogical_menu.svg"></image></svg> Storage - Logical
+                            <svg style="height: 16px; width: 16px;" class="tds-svg-icons " viewBox="0 0 115 115" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"> <image x="0" y="0" height="110px" width="110px" fill="#1f77b4" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="/tdstm/assets/icons/svg/storageLogical_menu.svg"></image></svg> Logical Storage
                         </a>
                     </li>
                     <li class="divider"></li>
