TM-14462 Checking and setting the context appropriately

--- a/web-app/components/cookbook/generation/task-generation-start-template.html
+++ b/web-app/components/cookbook/generation/task-generation-start-template.html
@@ -6,7 +6,7 @@
 			<div class="col-sm-6 col-md-3 col-lg-3">
 				<div class="form-group">
 					<label class="col-title" for="eventSelect">Event:</label>
-					<select class="form-control" name="eventSelect" id="eventSelect" ng-model="contexts.selectedEvent" ng-change="contexts.eventSelected(true)" ng-options="item as item.name for item in contexts.eventsArray">
+					<select class="form-control" name="eventSelect" id="eventSelect" ng-model="contexts.selectedEvent" ng-change="contexts.eventSelected()" ng-options="item as item.name for item in contexts.eventsArray">
 						<option value="">Please select</option>
 					</select>
 				</div>
