TM-13926 Updating to query fetchPostNotices
Call service
Fix issue displaying activation and expiration dates

--- a/web-app/tds/web-app/app-js/modules/noticeManager/components/view-edit/notice-view-edit.component.html
+++ b/web-app/tds/web-app/app-js/modules/noticeManager/components/view-edit/notice-view-edit.component.html
@@ -46,6 +46,7 @@
                         <tds-date-control
                                id="activationDate"
                                name="activationDate"
+                               [value]="model.activationDate"
                                [(ngModel)]="model.activationDate">
                         </tds-date-control>
                     </div>
@@ -56,6 +57,7 @@
                         <tds-date-control
 		                        id="expirationDate"
                                name="expirationDate"
+                                [value]="model.expirationDate"
                                [(ngModel)]="model.expirationDate">
                         </tds-date-control>
                     </div>
