TM-13926 Display properly activation and expiration dates
On notice list view

--- a/web-app/tds/web-app/app-js/modules/noticeManager/components/list/notice-list.component.html
+++ b/web-app/tds/web-app/app-js/modules/noticeManager/components/list/notice-list.component.html
@@ -90,6 +90,13 @@
                             {{notices[dataItem.typeId]}}
                         </ng-template>
 
+                        <ng-template kendoGridCellTemplate let-dataItem *ngIf="column.type === 'date'">
+                            <div>
+	                            {{dataItem[column.property] | tdsDate : dateFormat}}
+                            </div>
+						</ng-template>
+
+
                     </kendo-grid-column>
                 </kendo-grid>
             </div>
