TM-13926 Fix issue sending sequence parameter

--- a/web-app/tds/web-app/app-js/modules/noticeManager/components/view-edit/notice-view-edit.component.html
+++ b/web-app/tds/web-app/app-js/modules/noticeManager/components/view-edit/notice-view-edit.component.html
@@ -69,7 +69,7 @@
                         <kendo-numerictextbox
                                 [spinners]="false"
                                 name="sequence"
-                                [value]="model.sequence"
+                                [(ngModel)]="model.sequence"
                                 [format]="'n0'"
                                 [min]="0"
                                 [autoCorrect]="true">
